<resources>
    <string name="app_name">MessangerItStep</string>
    <string name="RegisterText"><u>Create now!</u></string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="login_description">Press for login</string>
    <string name="logout_description">Press for logout</string>
    <string name="fill_fields_below">Fill in the fields below to log in</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_text">Enter the code sent to</string>
    <string name="example_email">example@mail.com</string>
    <string name="reorder_button">Reorder</string>
    <string name="chats">Chats</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="more">More</string>
    <string name="online">Online</string>
    <string name="send_message">Send message…</string>
    <string name="send">Send</string>
    <string name="user_name">User name 01</string>
    <string name="user_image">User Image</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="user_name_icon">User Name Icon</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_first_and_last_name">Edit First and Last Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="add_photo">Add photo</string>
    <string name="logout">Logout</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
</resources>