<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        tools:context=".screens.confirm.ConfirmView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="false"
            android:contentDescription="@string/fill_fields_below"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0.05"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="64sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <android.widget.Button
            android:id="@+id/ConfirmBtn"
            style="@style/SolidBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/login_description"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing="0.05"
            android:text="@string/confirm"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/groupOfDigits"
            app:layout_constraintVertical_bias="0.0" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/homeAsUpIndicator"
            app:tint="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/confirm_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/textEmail"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/example_email"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/groupOfDigits"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupOfDigits"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="130dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/n1"
                style="@style/EditTextDigitWithBorder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/_1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/n2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/n2"
                style="@style/EditTextDigitWithBorder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/_2"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/n3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/n1"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/n3"
                style="@style/EditTextDigitWithBorder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/_3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/n4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/n2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/n4"
                style="@style/EditTextDigitWithBorder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/_4"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textColorHint="@color/cardview_dark_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/n3"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>