<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="785dp"
        tools:layout_conversion_absoluteWidth="393dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/main_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/homeAsUpIndicator"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:background="?attr/selectableItemBackground"
                android:minHeight="72dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:srcCompat="@mipmap/ic_launcher" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/typeTextBaseline"
                        android:layout_width="0dp"
                        android:layout_height="26dp"
                        android:baselineAlignBottom="true"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/typeTextBaseline2"
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:baselineAlignBottom="true"
                        android:visibility="invisible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/typeTextBaseline"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="bottom"
                        android:maxLines="1"
                        android:text="@string/user_name"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/mtrl_list_item_tint"
                        app:layout_constraintBaseline_toBaselineOf="@id/typeTextBaseline"
                        app:layout_constraintBottom_toTopOf="@+id/userStatus"
                        app:layout_constraintEnd_toEndOf="@+id/userStatus"
                        app:layout_constraintStart_toStartOf="@+id/userStatus"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/userStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:maxLines="1"
                        android:text="@string/online"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="#363636"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/typeTextBaseline2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userName" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/more"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    app:tint="#000000" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecyclerView">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/EditTextWithBorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="start|center_vertical"
            android:hint="@string/send_message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="64dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonSend"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_send_24"
            app:tint="#000000" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>